--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.alex788.videos</groupId>
-    <artifactId>Videos</artifactId>
+    <artifactId>videos</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
